# simple_vo

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  run_kitti_stereo.cpp
cmake/: FindVO.cmake
config/: default.yaml
include/myslam/: algorithm.h  backend.h  camera.h  common_include.h  config.h  dataset.h  feature.h  frame.h  frontend.h  g2o_types.h  map.h  mappoint.h  viewer.h  visual_odometry.h
src/: CMakeLists.txt  backend.cpp  camera.cpp  config.cpp  dataset.cpp  feature.cpp  frame.cpp  frontend.cpp  map.cpp  mappoint.cpp  viewer.cpp  visual_odometry.cpp
